Demo version bump to 1.3.6

--- a/app/src/main/res/layout/fragment_drawer_flow.xml
+++ b/app/src/main/res/layout/fragment_drawer_flow.xml
@@ -32,7 +32,10 @@
         android:background="@color/colorPrimary"
         android:fitsSystemWindows="true">
 
-        <include layout="@layout/fragment_nav_drawer" />
+        <include layout="@layout/fragment_nav_drawer"
+            android:id="@+id/fragment_nav_drawer">
+        </include>
+
     </FrameLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
